# vis-to-sim-baselines

./: .gitignore  DEPTH_BENCHMARK.md
benchmark/: .gitignore  README.md  env.yml  pyproject.toml
benchmark/benchmark/: __init__.py
benchmark/benchmark/adapters/: base.py  ffs.py  lingbot.py  realsense_hw.py  s2m2.py
benchmark/benchmark/camera/: d435i.py
benchmark/benchmark/io/: results.py  session.py
benchmark/benchmark/metrics/: completeness.py  nearfield.py  runtime.py  spatial.py  temporal.py
benchmark/benchmark/runners/: capture.py  evaluate.py  run_model.py
benchmark/benchmark/viz/: compare.py
benchmark/configs/: d435i_intrinsics_template.yaml  default.yaml
benchmark/scripts/: 00_setup_envs.sh  01_capture.sh  02_run_replay.sh  03_run_live.sh  04_evaluate.sh  _common.sh  smoke_test.py
lingbot-depth/: .gitignore  LICENSE  README.md  example.py  pyproject.toml  pyrightconfig.json  requirements.txt
lingbot-depth/examples/1/: intrinsics.txt
lingbot-depth/examples/4/: intrinsics.txt
lingbot-depth/mdm/model/: __init__.py  modules_decoder.py  modules_rgbd_encoder.py  utils.py
lingbot-depth/mdm/utils/: geo.py  io.py  vis.py
lingbot-depth/scripts/: _smoke_realtime.py  realtime_d435i.py
s2m2/: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml
s2m2/data/calib/: 1_01_camera_param_head.xml
s2m2/data/samples/Lid/: calib.xml
s2m2/demo/: export_onnx.py  export_tensorrt.py  online_calibration.py  trt_inference_test.py  visualize_2d_simple.py  visualize_3d_booster.py  visualize_3d_middlebury.py
s2m2/results/: s2m2_apriltag.csv
s2m2/results/s2m2_apriltag_frames/000000/: depth.npy  disp.npy
s2m2/scripts/: _smoke_realtime.py  realtime_d435i.py
s2m2/src/s2m2/calibration/: base.py  (+3 more)
(+166 files in other folders)
