[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdm"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch==2.6.0",
    "torchvision",
    "xformers==v0.0.29.post2",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdm*"]